// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Embed Block should render Default 1`] = `
<DocumentFragment>
  <div
    class="css-1tmmrj4-EmbedBlockWrapper e1t445oh1"
  >
    <iframe
      allowfullscreen=""
      aspectratio="1.78343949044586"
      class="css-qsfbe7-EmbedBlockIframe-EmbedBlockIframe-styleCustomCss e1t445oh0"
      id="iFrameResizer0"
      scrolling="no"
      src="https://www.example.com"
      style="overflow: hidden;"
      title="Title"
    />
  </div>
</DocumentFragment>
`;

exports[`Embed Block should render WithClassName 1`] = `
<DocumentFragment>
  <div
    class="extra-classname css-1tmmrj4-EmbedBlockWrapper e1t445oh1"
  >
    <iframe
      allowfullscreen=""
      aspectratio="1.78343949044586"
      class="css-qsfbe7-EmbedBlockIframe-EmbedBlockIframe-styleCustomCss e1t445oh0"
      id="iFrameResizer1"
      scrolling="no"
      src="https://www.example.com"
      style="overflow: hidden;"
      title="Title"
    />
  </div>
</DocumentFragment>
`;
